tests/baselines/reference/typecheckCommaExpression.errors.txt
typecheckCommaExpression.ts(1,2): error TS2304: Cannot find name 'a'.
typecheckCommaExpression.ts(1,2): error TS2695: Left side of comma operator is unused and has no side effects.
typecheckCommaExpression.ts(1,5): error TS2304: Cannot find name 'b'.


==== typecheckCommaExpression.ts (3 errors) ====
    (a, b)
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
        ~
!!! error TS2304: Cannot find name 'b'.